# scala-djinni-hello

./: .gitignore  .gitmodules  README.md  build.sbt  gen_djinni.sh  init_submodules.sh  update_submodules.sh
project/: djinni.scala
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/idl/: hello_world.djinni
src/main/scala/gie/: main.scala
